tdf#151094 ODT export: fix crash when linked paragraph style is deleted

If a document contains a linked paragraph-character style pair and the
paragraph style gets deleted, we crash on save.

Commit 3227975c0f42ff23d528f5ab94b4538c8af764c (sw: paragraph styles:
add doc model & UNO API for a linked character style, 2021-09-24) added
support for linked para/char styles, but it failed to get the lifecycle
correctly when it comes to deleting these styles.

Fix the dangling para/char style references by explicitly looking what
styles may refer to us and clear their references.

An alternative would be to clear the "link" pointer of our own "link"
pointer only, but broken documents may e.g. link multiple paragraph
styles to a single character style, so this is probably not enough.

Change-Id: I9465d43e90cf54c3c02bffda3e7c75b52c543a65
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140930
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>